kubernetes/local/k8s-deployment.yaml
###################################
# saludtechalpes-data-intake-service
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saludtechalpes-data-intake-service
  labels:
    app: saludtechalpes-data-intake-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saludtechalpes-data-intake-service
  template:
    metadata:
      labels:
        app: saludtechalpes-data-intake-service
    spec:
      containers:
        - name: saludtechalpes-data-intake-service
          image: caprilespe/saludtechalpes-data-intake-service:0.1.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1024m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: saludtechalpes-data-intake-service-network
spec:
  type: LoadBalancer
  selector:
    app: saludtechalpes-data-intake-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
